--- a/README
+++ b/README
@@ -1,2 +1,8 @@
 nix develop --extra-experimental-features flakes
 
+after upgrading nixpkgs version 
+
+-    nixpkgs.url = "github:NixOS/nixpkgs/nixos-22.05";
++    nixpkgs.url = "github:NixOS/nixpkgs/nixos-22.11";
+
+$ nix flake update 
