--- a/README
+++ b/README
@@ -7,6 +7,8 @@ after upgrading nixpkgs version
 
 $ nix flake update 
 
+nix flake update --extra-experimental-features flakes
+
 
 bazel run //:bazel -- update-repos -from_file=go.mod -to_macro=deps.bzl%go_dependencies
 
@@ -14,3 +16,4 @@ bazel test --test_output=all //...
 
 If BUILD file enters a bad state, if no manual text were updated, empty the BUILD file 
 and use gazelle to re-generate them
+
